--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>jfoenix</artifactId>
             <version>9.0.8</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jfxtras/jfxtras-all -->
+        <dependency>
+            <groupId>org.jfxtras</groupId>
+            <artifactId>jfxtras-all</artifactId>
+            <version>10.0-r1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
