--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,21 @@
             <artifactId>jfxtras-all</artifactId>
             <version>10.0-r1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.calendarfx/calendar -->
+        <dependency>
+            <groupId>com.calendarfx</groupId>
+            <artifactId>calendar</artifactId>
+            <version>11.8.3</version>
+            <type>pom</type>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.calendarfx/view -->
+        <dependency>
+            <groupId>com.calendarfx</groupId>
+            <artifactId>view</artifactId>
+            <version>11.8.3</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
