--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,12 @@
             <artifactId>view</artifactId>
             <version>11.8.3</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>2.2.3</version>
+        </dependency>
 
     </dependencies>
     <build>
