Add persistence repositories

--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,12 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>2.2.3</version>
         </dependency>
-
+<!--JDBC driver MSSQL-->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>8.2.2.jre11</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
