--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,14 @@
 
     <groupId>org.itlab</groupId>
     <artifactId>java-g029</artifactId>
+    <packaging>jar</packaging>
+    <name>ITLab</name>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javafx.version>8</javafx.version>
     </properties>
     <dependencies>
         <dependency>
@@ -81,6 +84,14 @@
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
+                <configuration>
+                    <mainClass>ITLab.Main</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>8.8.3</version>
                 <configuration>
                     <mainClass>ITLab.Main</mainClass>
                 </configuration>
